package hva.core;

public class Vaccine {
    
}
